# duckdb-raquet

./: .gitignore  Agent.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  PARALLEL_CORRECTNESS_REPORT.md  README.md  extension_config.cmake  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
benchmark/: README.md  queries_duckdb.sql
community-extensions/: README.md  description.yml
docs/: PERFORMANCE_COMPARISON.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: append_metadata.py  bin2c.py  run_sql_tests.py  run_sql_tests.sh  setup_duckdb.sh
src/: band_decoder.rs  lib.rs  metadata.rs  quadbin.rs  raquet_extension.cpp  wasm_lib.rs
src/functions/: macros.rs  mod.rs  quadbin_fns.rs  raster_fns.rs
src/include/: band_decoder.hpp  band_encoder.hpp  band_stats_v01.hpp  quadbin.hpp  raquet_extension.hpp  raquet_metadata.hpp
src/metadata/: raquet_metadata.cpp
src/quadbin/: quadbin_functions.cpp  quadbin_polyfill.cpp
src/raster/: band_decoder.cpp  band_encoder.cpp  band_math.cpp  band_stats_v01.cpp  read_raster.cpp  st_as_polygon.cpp  st_as_raster.cpp  st_as_wkb.cpp  st_clip.cpp  st_png_colormap.cpp  st_raster_stats.cpp  st_raster_value.cpp  st_region_stats.cpp  st_value_mask.cpp
src/table_functions/: raquet_table_functions.cpp
test/data/: test_palette.tif
test/sql/: quadbin.test  raster.test  read_raquet_macros.test  read_raster_metadata.test  st_as_polygon.test  st_as_raster.test  st_as_wkb.test  timeseries.test  v01_features.test  v030_features.test  v040_features.test  v050_features.test
test_data/: raquet_test.parquet
vcpkg_ports/gdal/: duckdb_gdal_json.patch  duckdb_gdal_windows_static.patch  portfile.cmake
